# CardCreator

./: AetherBound Origins.txt  GenerateCards.py  generateCard_v4.py  patchnotes.txt  pyproject.toml  quick_functions.py  rules.txt  starter_decks.csv  temp.txt  various_decks_and_sets.txt
card_frames/: card-frames.psd
card_json/: champions.json  equipment.json  first_champions.json  first_equipment_air.json  first_equipment_earth.json  first_equipment_fire.json  first_equipment_water.json  first_spells.json  fourth_equipment.json  fourth_spells.json  future_champions.json  future_equipment.json  future_spells.json  prospective_champions.json  prospective_equipment.json  prospective_spells.json  readme.txt  second_champions.json  second_equipment_air.json  second_equipment_earth.json  second_equipment_fire.json  second_equipment_water.json  second_spells.json  spells.json  third_champions.json  third_equipment.json  third_spells.json
gamemaker_prototype/AetherBound/: AetherBound.yyp
old_resources/: generateCard.py  generateCard_v2.py
old_resources/card_frames/: test_sword_Frame.psd
old_resources/card_json/: damage_per_cost.xlsx  first_fire_equipment.txt  first_water_equipment.txt
old_resources/card_json_v2/: first_champions.txt  first_equipment_water.txt  second_champions.txt  second_equipment_air.txt  second_equipment_earth.txt  second_equipment_water.txt
poem/: pyproject.toml
poem/poem/: Cards_Jamie_and_I_Game.docx  generateCard_v3.py  generateCard_v4.py  starter_decks.csv  starter_decks.xlsx
poem/tests/: test_poem.py
(+186 files in other folders)
