[tool.poetry]
name = "cardcreator"
version = "0.1.0"
description = ""
authors = ["Kellen Karls <kellen.karls@drake.edu>"]

[tool.poetry.dependencies]
python = "^2.7"
Pillow-PIL = "^0.1dev"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
